--- a/covid.Rmd
+++ b/covid.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Cumulative deaths from COVID-19"
 author: "Marcus Minko"
-date: "`r Sys.Date()`"
+date: "01-20-2022"
 output: 
   html_document: 
     toc: yes
